--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:7000/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs-react": "^2.4.6",
+    "body-parser": "^1.20.2",
+    "firebase": "^10.12.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
